# MAS-research

./: .gitignore  CLAUDE.md  DEVIATIONS.md  MINICORAL_PLAN.md  PROBE_PLAN.md  README.md  pyproject.toml  test.txt
cat2_extraction/: cat2_index.json  structural_core_2.4_2.5.json
configs/: api-4agent.yaml  api-gpt54mini.yaml  dev-mps.yaml  gpu-a100.yaml  gpu-shakedown.yaml
data/contexts/: ctx_000.json  (+49 more)
eval/: README.md  analyze.py  check_api.py  config.py  grade.py  judge.py  llm_client.py  prompts.py  run_all.py  run_mas.py  select_tasks.py
minicoral/: __init__.py  __main__.py  agent.py  config.py  coral_cli.py  engine.py  grader.py  heartbeat.py  hub.py  orchestrator.py  prompts.py  toolcall.py  tools.py  trajlog.py  transport.py  workspace.py
probe/: README.md  REPORT.md  common.py
references/: mast.txt
reproduction/: README.md  cost.py
results/: _smoke_full_trace.txt  judge_reports.md  summary.json  summary.md  tasks.jsonl
scripts/: cost_watch.py  pplx_proxy.py  setup_gpu.sh  smoke_engine.py
task_selection/: README.md  build_selection.py  chatdev_tasks.json  dylan_math_screen_results.json  dylan_math_tasks.json  dylan_screen_results.json  dylan_tasks.json  macnet_srdd_tasks.json  magentic_gaia_all_outcomes.json  magentic_gaia_tasks.json  sample_srdd.py  screen_dylan.py  screen_dylan_math.py  trace_screening.md
tests/: conftest.py  test_agent.py  test_config_prompts.py  test_configs.py  test_coral_cli.py  test_engine.py  test_grader.py  test_heartbeat.py  test_orchestrator.py  test_toolcall.py  test_tools.py  test_transport.py  test_workspace.py
(+304 files in other folders)
