[project]
name = "minicoral"
version = "0.1.0"
description = "Paper-faithful re-implementation of the CORAL framework (arXiv 2604.01658)"
requires-python = ">=3.11"
dependencies = ["pyyaml"]

[project.optional-dependencies]
api = ["openai"]
hf = ["torch", "transformers", "accelerate"]
dev = ["pytest", "pytest-asyncio", "numpy", "scipy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "model: requires a real model (HF weights or API key); excluded from the model-free suite",
]
addopts = "-m 'not model'"
